--- a/rust/06.字符串.md
+++ b/rust/06.字符串.md
@@ -3,7 +3,7 @@
 
 ### 字符串 slice
 
-```
+```rust
 let s = String::from("hello world");
 
 let hello = &s[0..5];
@@ -19,11 +19,13 @@ let world = &s[6..11];
 字符串字面值就是 slice，其类型是 &str：它是一个指向二进制程序特定位置的 slice。
 
 字面值和 String 的 slice 作为参数的区别：
-```
+
+```rust
 fn first_word(s: &String) -> &str {
 ```
 与
-```
+
+```rust
 fn first_word(s: &str) -> &str {
 ```
 如果有一个字符串 slice，可以直接传递它。如果有一个 String，则可以传递整个 String 的 slice。定义一个获取字符串 slice 而不是 String 引用的函数使得我们的 API 更加通用并且不会丢失任何功能。
@@ -31,9 +33,62 @@ fn first_word(s: &str) -> &str {
 
 ### 其它类型的 slice
 
-```
+```rust
 let a = [1, 2, 3, 4, 5];
 
 let slice = &a[1..3];
+```
+
+## 字符串
+
+### 更新字符串
+
+使用 push_str 和 push
+
+```rust
+let mut s = String::from("foo");
+s.push_str("bar");
+```
+
+```rust
+let mut s = String::from("lo");
+s.push('l');
+```
+
+使用 + 运算符
+
+```rust
+let s1 = String::from("Hello, ");
+let s2 = String::from("world!");
+let s3 = s1 + &s2; // 注意 s1 被移动了，不能继续使用
+```
+
++ 运算符使用了 add 函数，这个函数签名看起来像这样：
+
+```rust
+fn add(self, s: &str) -> String {
+```
+
+> 注意
+之所以能够在 add 调用中使用 &s2 是因为 &String 可以被 强转（coerced）成 &str。当add函数被调用时，Rust 使用了一个被称为 解引用强制多态（deref coercion）的技术，你可以将其理解为它把 &s2 变成了 &s2[..]。
+
+
+**内部表现**
+
+String 是一个 `Vec<u8>` 的封装。
+
+
+遍历字符串
+
+```rust
+for c in "नमस्ते".chars() {
+    println!("{}", c);
+}
+```
+
+```rust
+for b in "नमस्ते".bytes() {
+    println!("{}", b);
+}
 ```
 
