--- a/rust/12.包与模块.md
+++ b/rust/12.包与模块.md
@@ -18,7 +18,8 @@
 
 #### 常见策略
 对于函数，不需要引入完成的路径。对于结构体、枚举类和其它项，习惯是指定他们的完整路径
-```
+
+```rust
 use std::collections::HashMap;
 
 fn main() {
@@ -29,7 +30,8 @@ fn main() {
 
 
 #### 使用 as 关键词提供新的名称
-```
+
+```rust
 use std::fmt::Result;
 use std::io::Result as IoResult;
 
@@ -46,19 +48,21 @@ fn function2() -> IoResult<()> {
 #### 重导出
 用于引入被暴露在当前作用域直接调用
 
-```
+```rust
 pub use crate::front_of_house::hosting;
 ```
 
 
 #### 引入多个
-```
+
+```rust
 use std::{cmp::Ordering, io};
 ```
 
 
 #### 全局引入
-```
+
+```rust
 use std::collections::*;
 ```
 
