--- a/rust/13.错误处理.md
+++ b/rust/13.错误处理.md
@@ -5,6 +5,7 @@
 #### 概念
 
 当执行 panic! 宏时，程序会打印出一个错误信息，展开并清理栈数据，然后接着退出。如果不需要栈展开，可以选择直接终止：
+
 ```
 [profile.release]
 panic = 'abort'
@@ -14,7 +15,7 @@ panic = 'abort'
 #### 查看 backtrace
 
 可 `RUST_BACKTRACE` 环境变量设置为任何不是 0 的值来获取查看堆栈信息
-```
+```bash
 RUST_BACKTRACE=1 cargo run
 ```
 启用 debug 标识可以查看更多的堆栈信息。
@@ -25,7 +26,7 @@ RUST_BACKTRACE=1 cargo run
 
 Result 枚举
 
-```
+```rust
 enum Result<T, E> {
     Ok(T),
     Err(E),
@@ -35,7 +36,7 @@ enum Result<T, E> {
 
 #### 使用 match 处理 Result
 
-```
+```rust
 use std::fs::File;
 
 fn main() {
@@ -53,7 +54,7 @@ fn main() {
 
 #### 使用 match 处理 Err
 
-```
+```rust
 let f = match f {
     Ok(file) => file,
     Err(error) => match error.kind() {
@@ -68,7 +69,7 @@ let f = match f {
 
 也可以使用 if let 表达式
 
-```
+```rust
 if let Err(e) = run(config) {
     println!("Application error: {}", e);
 
@@ -80,12 +81,14 @@ if let Err(e) = run(config) {
 #### 使用 unwrap 与 expect
 
 unwrap
-```
+
+```rust
 let f = File::open("hello.txt").unwrap();
 ```
 
 expect
-```
+
+```rust
 let f = File::open("hello.txt").expect("Failed to open hello.txt");
 ```
 
@@ -93,7 +96,8 @@ let f = File::open("hello.txt").expect("Failed to open hello.txt");
 #### ？运算符
 
 直接返回
-```
+
+```rust
 use std::io;
 use std::io::Read;
 use std::fs::File;
@@ -116,7 +120,8 @@ fn read_username_from_file() -> Result<String, io::Error> {
 ```
 
 简写
-```
+
+```rust
 use std::io;
 use std::io::Read;
 use std::fs::File;
@@ -130,7 +135,8 @@ fn read_username_from_file() -> Result<String, io::Error> {
 ```
 
 除了直接用于返回值外，还可以链式调用
-```
+
+```rust
 use std::io;
 use std::io::Read;
 use std::fs::File;
@@ -147,7 +153,7 @@ fn read_username_from_file() -> Result<String, io::Error> {
 
 ### main 的另一个返回值
 
-```
+```rust
 use std::error::Error;
 use std::fs::File;
 
