--- a/rust/14.生命周期.md
+++ b/rust/14.生命周期.md
@@ -4,7 +4,7 @@
 
 示例1:
 
-```
+```rust
 fn main() {
     let string1 = String::from("long string is long");
     let result;
@@ -24,7 +24,8 @@ fn longest<'a>(x: &'a str, y: &'a str) -> &'a str {
 }
 ```
 报错：
-```
+
+```rust
 error[E0597]: `string2` does not live long enough
   --> src/main.rs:16:44
    |
@@ -37,7 +38,8 @@ error[E0597]: `string2` does not live long enough
 ```
 
 改进：
-```
+
+```rust
 fn longest<'a>(x: &'a str, y: & str) -> &'a str {
     x
 }
@@ -45,7 +47,8 @@ fn longest<'a>(x: &'a str, y: & str) -> &'a str {
 
 示例2：
 当从函数返回一个引用，返回值的生命周期参数需要与一个参数的生命周期参数相匹配。如果返回的引用 没有 指向任何一个参数，那么唯一的可能就是它指向一个函数内部创建的值，它将会是一个悬垂引用，因为它将会在函数结束时离开作用域。尝试考虑这个并不能编译的 longest 函数实现：
-```
+
+```rust
 fn longest<'a>(x: &str, y: &str) -> &'a str {
     let result = String::from("really long string");
     result.as_str()
@@ -59,7 +62,7 @@ fn longest<'a>(x: &str, y: &str) -> &'a str {
 
 ### 结构体中的生命周期注解
 
-```
+```rust
 struct ImportantExcerpt<'a> {
     part: &'a str,
 }
@@ -93,7 +96,7 @@ fn main() {
 
 ### 方法中的生命周期注解
 
-```
+```rust
 impl<'a> ImportantExcerpt<'a> {
     fn announce_and_return_part(&self, announcement: &str) -> &str {
         println!("Attention please: {}", announcement);
@@ -108,14 +111,14 @@ impl<'a> ImportantExcerpt<'a> {
 
 这里有一种特殊的生命周期值得讨论：'static，其生命周期能够存活于整个程序期间。所有的字符串字面值都拥有 'static 生命周期，我们也可以选择像下面这样标注出来：
 
-```
+```rust
 let s: &'static str = "I have a static lifetime.";
 ```
 
 
 ### 结合泛型类型参数、trait bounds 和生命周期
 
-```
+```rust
 use std::fmt::Display;
 
 fn longest_with_an_announcement<'a, T>(x: &'a str, y: &'a str, ann: T) -> &'a str
