--- a/rust/07.结构体.md
+++ b/rust/07.结构体.md
@@ -3,14 +3,11 @@
 ### 定义结构体
 
 ```rust
-#![allow(unused)]
-fn main() {
-    struct User {
-        username: String,
-        email: String,
-        sign_in_count: u64,
-        active: bool,
-    }
+struct User {
+    username: String,
+    email: String,
+    sign_in_count: u64,
+    active: bool,
 }
 ```
 
@@ -55,7 +52,7 @@ fn main() {
 }
 ```
 
-### 方法
+### 定义方法
 
 ```rust
 #[derive(Debug)]
@@ -86,7 +83,7 @@ p1.distance(&p2);
 ```
 
 
-### 关键函数
+### 关联函数
 
 impl 块的另一个有用的功能是：允许在 impl 块中定义 不 以 self 作为参数的函数。这被称为 关联函数（associated functions），因为它们与结构体相关联。它们仍是函数而不是方法，因为它们并不作用于一个结构体的实例。
 
