--- a/rust/17.高级 trait.md
+++ b/rust/17.高级 trait.md
@@ -222,3 +222,88 @@ fn main() {
 
 
 
+
+### DST
+
+动态大小类型（dynamically sized types）的概念。这有时被称为 “DST” 或 “unsized types”，这些类型允许我们处理只有在运行时才知道大小的类型。
+
+比如：
+
+```rust
+let s1: str = "Hello there!";
+let s2: str = "How's it going?";
+```
+
+Rust 需要知道应该为特定类型的值分配多少内存，同时所有同一类型的值必须使用相同数量的内存。如果允许编写这样的代码，也就意味着这两个 str 需要占用完全相同大小的空间，不过它们有着不同的长度。这也就是为什么不可能创建一个存放动态大小类型的变量的原因。
+
+
+>字符串
+虽然 &T 是一个储存了 T 所在的内存位置的单个值，&str 则是 两个 值：str 的地址和其长度。于是，&str 就有了一个在编译时可以知道的大小。
+这里是 Rust 中动态大小类型的常规用法：他们有一些额外的元信息来储存动态信息的大小。这引出了动态大小类型的黄金规则：必须将动态大小类型的值置于某种指针之后。
+此外，也可以将 str 与其它类型的指针结合：比如 Box<str> 或 Rc<str>。
+
+
+#### Sized trait
+
+Rust 有一个特定的 trait 来表明一个类型的大小在编译时可知。
+
+示例1：  
+在泛型中，Rust 隐式的为每一个泛型函数增加了 Sized bound。
+
+```rust
+fn generic<T>(t: T) {
+    // --snip--
+}
+```
+
+实际上被当作如下处理：
+
+```rust
+fn generic<T: Sized>(t: T) {
+    // --snip--
+}
+```
+
+泛型函数默认只能用于在编译时已知大小的类型，如果在编译时不知道大小，可以使用如下特殊语法来放宽这个限制：
+
+```rust
+fn generic<T: ?Sized>(t: &T) {
+    // --snip--
+}
+```
+
+
+### trait 对象
+ 
+trait 对象指向一个实现了我们指定 trait 的类型的实例，以及一个用于在运行时查找该类型的trait方法的表。我们可以使用 trait 对象代替泛型或具体类型。任何使用 trait 对象的位置，Rust 的类型系统会在编译时确保任何在此上下文中使用的值会实现其 trait 对象的 trait。
+
+>在结构体或枚举中，结构体字段中的数据和 impl 块中的行为是分开的，不同于其他语言中将数据和行为组合进一个称为对象的概念中。trait 对象将数据和行为两者相结合，从这种意义上说 则 其更类似其他语言中的对象。不过 trait 对象不同于传统的对象，因为不能向 trait 对象增加数据。
+
+1.使用 trait object
+
+```rust
+pub struct Screen {
+    pub components: Vec<Box<dyn Draw>>,
+}
+```
+
+2.使用 泛型 + trait bounds
+
+```rust
+pub struct Screen<T: Draw> {
+    pub components: Vec<T>,
+}
+
+impl<T> Screen<T>
+    where T: Draw {
+    pub fn run(&self) {
+        for component in self.components.iter() {
+            component.draw();
+        }
+    }
+}
+```
+
+注：  
+使用后者，限制了  Screen 实例只能有一种泛型实现，而使用 trait 对象的方法，一个 Screen 实例可以存放一个既能包含 Box<Button>，也能包含 Box<TextField> 的 Vec<T>。
+
