--- a/rust/18.函数与宏.md
+++ b/rust/18.函数与宏.md
@@ -89,6 +89,88 @@ temp_vec
 
 #### derive 宏
 
+示例：
+
+文件名：hello_macro_derive/src/lib.rs
+
+```rust
+extern crate proc_macro;
+
+use crate::proc_macro::TokenStream;
+use quote::quote;
+use syn;
+
+#[proc_macro_derive(HelloMacro)]
+pub fn hello_macro_derive(input: TokenStream) -> TokenStream {
+    // 将 Rust 代码解析为语法树以便进行操作
+    let ast = syn::parse(input).unwrap();
+
+    // 构建 trait 实现
+    impl_hello_macro(&ast)
+}
+
+fn impl_hello_macro(ast: &syn::DeriveInput) -> TokenStream {
+    let name = &ast.ident;
+    let gen = quote! {
+        impl HelloMacro for #name {
+            fn hello_macro() {
+                println!("Hello, Macro! My name is {}", stringify!(#name));
+            }
+        }
+    };
+    gen.into()
+}
+```
+
+另一个项目中，添加依赖
+
+```toml
+[dependencies]
+hello_macro = { path = "../hello_macro" }
+hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }
+```
+
+文件名：src/main.rs
+
+```rust
+use hello_macro::HelloMacro;
+use hello_macro_derive::HelloMacro;
+
+#[derive(HelloMacro)]
+struct Pancakes;
+
+fn main() {
+    Pancakes::hello_macro();
+}
+```
+
 #### 类属性宏
 
+定义宏：
+
+```rust
+#[proc_macro_attribute]
+pub fn route(attr: TokenStream, item: TokenStream) -> TokenStream {
+```
+
+使用宏：
+
+```rust
+#[route(GET, "/")]
+fn index() {
+```
+
 #### 类函数宏
+
+定义宏：
+
+```rust
+#[proc_macro]
+pub fn sql(input: TokenStream) -> TokenStream {
+```
+
+使用宏：
+
+```rust
+let sql = sql!(SELECT * FROM posts WHERE id=1);
+```
