--- a/rust/02.数据类型.md
+++ b/rust/02.数据类型.md
@@ -1,11 +1,56 @@
 ## 数据类型
 
 ### 标量（scalar）
+
 整型 浮点型 布尔类型 字符类型
 
-**整型溢出**  
+#### 整数
+
+|长度|有符号|无符号|
+|:----|:----|:----|
+|8-bit|i8|u8|
+|16-bit|i16|u16|
+|32-bit|i32|u32|
+|64-bit|i64|u64|
+|128-bit|i128|u128|
+|arch|isize|usize|
+
+字面值
+
+|数字字面值|例子|
+|:----|:----|
+|Decimal (十进制)|98_222|
+|Hex (十六进制)|0xff|
+|Octal (八进制)|0o77|
+|Binary (二进制)|0b1111_0000|
+|Byte (单字节字符)(仅限于u8)|b'A'|
+
+
+#### 浮点数
+
+`f32`和`f64`，默认 f64
+
+#### 布尔
+
+bool
+
+#### 字符
+
+占4个字节
+
+```rust
+fn main() {
+    let c = 'z';
+    let z = 'ℤ';
+    let heart_eyed_cat = '😻';
+}
+```
+
+**整型溢出**
+
 debug 模式编译时会检测溢出。在 release 构建中，不检测溢出，而会进行二进制补码包装。
 
 
 ### 复合（compound）
+
 元组 数组
