--- a/rust/04.控制流.md
+++ b/rust/04.控制流.md
@@ -78,3 +78,31 @@ fn main() {
 }
 ```
 
+for 循环 中 IntoIterator 语法糖
+
+```rust
+let values = vec![1, 2, 3, 4, 5];
+
+for x in values {
+    println!("{}", x);
+}
+
+// de-sugars
+
+let values = vec![1, 2, 3, 4, 5];
+{
+    let result = match IntoIterator::into_iter(values) {
+        mut iter => loop {
+            let next;
+            match iter.next() {
+                Some(val) => next = val,
+                None => break,
+            };
+            let x = next;
+            let () = { println!("{}", x); };
+        },
+    };
+    result
+}
+```
+
