--- a/fpinscala/02.函数式数据结构.md
+++ b/fpinscala/02.函数式数据结构.md
@@ -1,5 +1,6 @@
 附：List 的相关源码
-```
+
+```scala
 sealed trait List[+A] // `List` data type, parameterized on a type, `A`
 case object Nil extends List[Nothing] // A `List` data constructor representing the empty list
 /* Another data constructor, representing nonempty lists. Note that `tail` is another `List[A]`,
@@ -22,12 +23,13 @@ object List { // `List` companion object. Contains functions for creating and wo
   def apply[A](as: A*): List[A] = // Variadic function syntax
     if (as.isEmpty) Nil
     else Cons(as.head, apply(as.tail: _*))
-
   ...
+}
 ```
 
-练习3.1 下面的匹配表达式结果是什么？
-```
+练习`3.1 `下面的匹配表达式结果是什么？
+
+```scala
 var x = List(1,2,3,4,5) match {
   case Cons(x, Cons(2, Cons(4,_))) =>  x
   case Nil => 42
@@ -37,8 +39,9 @@ var x = List(1,2,3,4,5) match {
 }
 ```
 
-练习3.2 ~ 3.6 使用case表达式与递归实现List对象的一些方法
-```
+练习 `3.2 ~ 3.6` 使用case表达式与递归实现List对象的一些方法
+
+```scala
 def tail[A](l: List[A]): List[A] = {
   l match {
     case Nil => sys.error("tail of empty list")
@@ -84,22 +87,30 @@ def init[A](l: List[A]): List[A] = {
 }
 ```
 
-* 改善高阶函数的类型推导
+* 改善高阶函数的类型推导*
+
+```scala
 def dropWhile[A](l: List[A], f: A => Boolean): List[A] = ???
+```
 
 答案
+
+```scala
 def dropWhile[A](as: List[A])(f: A=>Boolean): List[A] = {
   as match {
     case Cons(h, t) if f(h) => dropWhile(t)(f)
     case _ => as
   }
 }
+```
+
 将非柯里化改成柯里化，有助于类型推导。
 该方法第二个参数的类型A，可以通过传入的第一个参数推导出来，这样写匿名函数的时候就不用指定类型A了。
 
-练习3.7~3.15 基于List的递归并泛化为高阶函数
+练习 `3.7~3.15` 基于List的递归并泛化为高阶函数
 实现 foldRight 与 foldLeft，以及借用它们实现一些常见函数。
-```
+
+```scala
 def foldRight[A, B](as: List[A], z: B)(f: (A, B) => B): B = // Utility functions
   as match {
     case Nil => z
@@ -131,10 +142,11 @@ def concat[A](l:List[List[A]]):List[A] = {
 }
 ```
 
-* 右折叠的理解
+*右折叠的理解*
 右折叠有两个参数，第一个参数是初始值只有第一次计算时会用到，后面都没用（z总是透传）。因为累加值（中间值）一直在栈空间保留着。第二个参数是计算函数 f，总是透传，并且值不会变化。如果 f 是固定形式，那么可以不用传它。 
 示例：
-```
+
+```scala
 def concat_2[A](l:List[List[A]]):List[A] = l match {
   case Nil => Nil
   case Cons(h, t) => append(h, concat_2(t))
@@ -142,14 +154,15 @@ def concat_2[A](l:List[List[A]]):List[A] = l match {
 ```
 （该方法既没有初始值/累加值参数，也没有 f 计算函数参数）
 
-* 与左折叠的对比
+*与左折叠的对比*
 计算函数 f，它只是为了用而传（因为预先没有设定），这在左右折叠中都是一样的，没什么区别。
 而初始值/累加值参数，是有区别的。比如在右折叠，初始值参数仅仅是初始值，中间值是另外在栈空间中保留着，可能会导致栈溢出。而左折叠中，它既是初始值又是累加值，栈空间是不保留中间值的，没有栈溢出。
 
 
-练习3.16~3.23
+练习 `3.16~3.23`
 更多与列表相关的函数
-```
+
+```scala
 def add1(l: List[Int]): List[Int] =
   foldRight(l, Nil: List[Int])((x, xs) => Cons(x + 1, xs))
 
@@ -187,8 +200,9 @@ def zipWith[A,B,C](a:List[A], b:List[B])(f: (A,B) => C):List[C] = (a,b) match {
 }
 ```
 
-练习3.24 检测一个list子序列是否包含另一个list
-```
+练习 `3.24` 检测一个list子序列是否包含另一个list
+
+```scala
 @scala.annotation.tailrec
 def startsWith[A](l: List[A], prefix: List[A]): Boolean = (l, prefix) match {
   case (_, Nil) => true
@@ -204,9 +218,10 @@ def hasSubsequence[A](sup: List[A], sub: List[A]): Boolean = sup match {
 }
 ```
 
-练习3.25~3.28 
+练习`3.25~3.28`
 定义二叉树结构
-```
+
+```scala
 sealed trait Tree[+A]
 
 case class Leaf[A](value: A) extends Tree[A]
@@ -215,6 +230,8 @@ case class Branch[A](left: Tree[A], right: Tree[A]) extends Tree[A]
 ```
 
 实现相关方法
+
+```scala
 def size[A](t: Tree[A]): Int = ???
 
 def maximum(t: Tree[Int]): Int = ???
@@ -222,9 +239,11 @@ def maximum(t: Tree[Int]): Int = ???
 def depth[A](t: Tree[A]): Int = ???
 
 def map[A,B](t: Tree[A])(f: A => B): Tree[B] = ???
+```
 
 答案
-```
+
+```scala
 def size[A](t: Tree[A]): Int = t match {
   case Leaf(_) => 1
   case Branch(l, r) => size(l) + size(r)
