--- a/fpinscala/03.不用异常来处理错误.md
+++ b/fpinscala/03.不用异常来处理错误.md
@@ -2,10 +2,11 @@
 破坏了引用透明（表达式 throw new Exception("fail") 在try语句内与try语句外有区别，无法直接使用代换模型）
 异常类型不可预测，方法签名中没有告诉我们可能发生的异常。如果忘记处理，可能直到运行时才会知道该异常。
 
-练习4.1~4.5 Option 数据类型
+练习`4.1~4.5` Option 数据类型
 
 定义1：
-```
+
+```scala
 sealed trait Option[+A] {
 
   def getOrElse[B >: A](default: => B): B
@@ -31,7 +32,8 @@ map 用于将一个 Option 转成另一个 Option。 主要目的是计算
 flatMap只是为了将值作为参数传入到另一个返回值是Option 的计算中
 
 答案：
-```
+
+```scala
 def getOrElse[B >: A](default: => B): B = this match {
   case None => default
   case Some(a) => a
@@ -59,7 +61,8 @@ def flatMap[B](f: A => Option[B]): Option[B] = this match {
 ```
 
 定义2：
-```
+
+```scala
 object Option {
   def map[A, B](a: Option[A])(f: A => B): Option[B] = a match {
     case None => None
@@ -74,7 +77,8 @@ object Option {
 map2 使两个 Option 内部参与计算，返回第三个 Option。
 
 答案
-```
+
+```scala
 def map2[A, B, C](a: Option[A], b: Option[B])(f: (A, B) => C): Option[C] = {
   a flatMap (aa => b map (bb => f(aa, bb)))
 }
@@ -82,7 +86,8 @@ def map2[A, B, C](a: Option[A], b: Option[B])(f: (A, B) => C): Option[C] = {
 
 * for 推导
 这里使用 flatMap 将Option内的参数传入 map的作用域。如果嵌套很多，读起来不太直观，可以使用 for 推导改写：
-```
+
+```scala
 def map2[A, B, C](a: Option[A], b: Option[B])(f: (A, B) => C): Option[C] = {
   for {
     aa <- a
@@ -92,7 +97,8 @@ def map2[A, B, C](a: Option[A], b: Option[B])(f: (A, B) => C): Option[C] = {
 ```
 
 定义3：
-```
+
+```scala
 def sequence[A](a: List[Option[A]]): Option[List[A]] =
 ```
 
@@ -102,7 +108,8 @@ sequence 将列表中的 Option中的值合并到一起，形成一个新的 Opt
 注：之前在 List中的 foldRight 方法的实现中，case Nil 的作用仅是判断列表是否递归完毕。
 
 答案
-```
+
+```scala
 def sequence[A](a: List[Option[A]]): Option[List[A]] =
   a.foldRight[Option[List[A]]](Some(Nil))((x, y) => map2(x, y)(_ :: _))
 
@@ -113,21 +120,24 @@ def sequence_1[A](a: List[Option[A]]): Option[List[A]] = a match {
 }
 ```
 
-*注： sequence 的使用场景
+*注：sequence 的使用场景*
 函数的作用是将列表中的 Option中的值合并到一起，形成一个新的 Option。其参数值 List[Option[A]，通常是通过 map 得到的。因为经过map与 sequence，
 做了两次遍历，效率很低。比如：
-```
+
+```scala
 def parseInts(a: List[String]): Option[List[Int]] =
   Option.sequence(a map (i => Try(i.toInt)))
 ```
 
 定义4：因此定义另一个方法，直接将 List[A] 转换成 Option[List[B]]
-```
+
+```scala
 def traverse[A, B](a: List[A])(f: A => Option[B]): Option[List[B]]
 ```
 
 答案
-```
+
+```scala
 def traverse[A, B](a: List[A])(f: A => Option[B]): Option[List[B]] = {
   a.foldRight[Option[List[B]]](Some(Nil))((x,y) => map2(f(x), y)(_ :: _))
 }
@@ -137,15 +147,16 @@ def parseInts(a: List[String]): Option[List[Int]] =
   Option.traverse(a)(i => Try(i.toInt))
 ```
 
-* 总结一下：这里最重要的就两个函数，map 与 map2。
+* 总结一下：这里最重要的就两个函数，map 与 map2。*
 前者是将一个 Option 转成另一个 Option。计算发生在单个Option内部；
 后者是将两个 Option 转成第三个 Option。计算发生在多个Option内部之间。
 
 
-练习4.6~4.8 Either 数据类型
+练习`4.6~4.8` Either 数据类型
 
 定义 Etiher
-```
+
+```scala
 sealed trait Either[+E, +A] {
   def map[B](f: A => B): Either[E, B]
 
@@ -162,7 +173,8 @@ case class Right[+A](value: A) extends Either[Nothing, A]
 ```
 
 基本方法实现
-```
+
+```scala
 def map[B](f: A => B): Either[E, B] =
   this match {
     case Right(a) => Right(f(a))
@@ -192,7 +204,8 @@ def map2[EE >: E, B, C](b: Either[EE, B])(f: (A, B) => C): Either[EE, C] = {
 ```
 
 工具方法
-```
+
+```scala
 object Either {
   def traverse[E, A, B](es: List[A])(f: A => Either[E, B]): Either[E, List[B]] =
     es.foldRight[Either[E, List[B]]](Right(Nil))((x, y) => f(x).map2(y)(_ :: _))
@@ -212,7 +225,8 @@ object Either {
 ```
 
 示例1
-```
+
+```scala
 def mean(xs: IndexedSeq[Double]): Either[String, Double] = {
   if (xs.isEmpty)
     Left("means of empty list")
@@ -229,7 +243,8 @@ def saveDiv(x: Int, y: Int): Either[Exception, Int] = {
 ```
 
 示例2
-```
+
+```scala
 case class Person(name: Name, age: Age)
 
 sealed class Name(val value: String)
@@ -258,7 +273,8 @@ object Person {
 ```
 
 扩展：可同时记录多个错误
-```
+
+```scala
 trait Partial[+A, +B]
 
 case class Errors[+A](get: Seq[A]) extends Partial[A, Nothing]
