--- a/fpinscala/04.严格求值与惰性求值.md
+++ b/fpinscala/04.严格求值与惰性求值.md
@@ -1,6 +1,7 @@
 一、非严格求值
 传名调用（求值推迟+但可能重复调用） + lazy 标识符 = （求值推迟，不重复调用）
-```
+
+```scala
 def maybeTwice(b: Boolean, i: => Int) = {
   lazy val lazyI = i
   if (b) lazyI + lazyI else 0
@@ -17,7 +18,8 @@ println(maybeTwice(true, {
 
 
 二、惰性列表
-```
+
+```scala
 sealed trait Stream[+A]
 
 case object Empty extends Stream[Nothing]
@@ -41,8 +43,9 @@ object Stream {
 ```
 
 
-练习5.1~5.3 工具方法
-```
+练习`5.1~5.3` 工具方法
+
+```scala
 sealed trait Stream[+A] {
   def toListRecursive: List[A] = this match {
     case Cons(h, t) => h() :: t().toListRecursive
@@ -83,8 +86,9 @@ sealed trait Stream[+A] {
 ```
 
 
-练习5.4~5.6 传名调用提前终止遍历
-```
+练习`5.4~5.6` 传名调用提前终止遍历
+
+```scala
 def exists(p: A => Boolean): Boolean = this match {
   case Cons(h, t) => p(h()) || t().exists(p)
   case _ => false
@@ -124,8 +128,9 @@ def headOption: Option[A] = {
 总结一点，foldRight 的作用是遍历当前列表，并且提供一个处理函数。可以返回新的惰性列表，也可以返回其它值。
 
 
-练习5.7 使用 foldRight 重写 map,filter,append,flatMap
-```
+练习`5.7` 使用 foldRight 重写 map,filter,append,flatMap
+
+```scala
 def map[B](f: A => B): Stream[B] =
   foldRight(empty[B])((h, t) => cons(f(h), t))
 
@@ -150,8 +155,9 @@ def find(p: A => Boolean): Option[A] =
 无限流使用的是 递归调用 conn，生成无限的待构建列表。
 无限流目的生成一个待构建列表（可以理解成一个可以构建列表的函数），在需要时生成实际的列表（调用构建列表函数）。
 
-练习5.8~5.12 
-```
+练习`5.8~5.12` 
+
+```scala
 val ones: Stream[Int] = cons(1, ones)
 
 def constant[A](a: A): Stream[A] = {
@@ -197,8 +203,9 @@ val onesViaUnfold = unfold(1)(_ => Some((1, 1)))
 
 
 
-练习5.13 使用 unfold 重新实现 map, take, takeWhile, zipWith 以及 zipWithAll
-```
+练习`5.13 `使用 unfold 重新实现 map, take, takeWhile, zipWith 以及 zipWithAll
+
+```scala
 def mapViaUnfold[B](f: A => B): Stream[B] =
   unfold(this) {
     case Cons(h, t) => Some((f(h()), t()))
