--- a/fpinscala/05.纯函数式状态.md
+++ b/fpinscala/05.纯函数式状态.md
@@ -1,7 +1,8 @@
 使用返回值中携带一个新的状态，而不是直接改变成员变量。
 
-练习6.1~6.4 随机数相关方法的一般实现
-```
+练习`6.1~6.4` 随机数相关方法的一般实现
+
+```scala
 trait RNG {
   def nextInt: (Int, RNG)
 }
@@ -51,10 +52,12 @@ object RNG {
 }
 ```
 
-
 观察上述实现，每个方法都是 rng => (A, RNG) 的映射，这类映射叫作 state action（状态行为）。
-练习6.5~6.9 状态行为与状态行为的组合嵌套
-```
+
+
+练习 `6.5~6.9` 状态行为与状态行为的组合嵌套
+
+```scala
 object RNG {
 
   // 类型别名,
@@ -142,10 +145,11 @@ object RNG {
   def rollDie: Rand[Int] = map(nonNegativeLessThan(6))(_ + 1)
 
 }
-
-
-练习6.10 状态行为数据类型
 ```
+
+练习 `6.10 ` 状态行为数据类型
+
+```scala
 case class State[S, +A](run: S => (A, S)) {
   def map[B](f: A => B): State[S, B] =
     State(s => {
@@ -187,10 +191,10 @@ object State {
 ```
 
 
-练习6.11
+练习`6.11`
 https://www.scala-exercises.org/fp_in_scala/pure_functional_state
 
-```
+```scala
 sealed trait Input
 
 case object Coin extends Input
