--- a/fpinscala/01.初步函数式编程.md
+++ b/fpinscala/01.初步函数式编程.md
@@ -1,9 +1,13 @@
-练习2.2
+练习`2.2`
 实现 isSorted 方法，检测 Array[A] 是否按照给定的比较函数排序:
+
+```scala
 def isSorted[A](as: Array[A], gt: (A,A) => Boolean): Boolean = ???
+```
 
 答案
-```
+
+```scala
 def isSorted[A](as: Array[A], gt: (A, A) => Boolean): Boolean = {
   @scala.annotation.tailrec
   def go(n: Int): Boolean =
@@ -17,7 +21,8 @@ isSorted[Int](Array(1, 2, 3, 4), _ >= _) // true
 ```
 
 * 尾递归实现 fibs
-```
+
+```scala
 def fibs(n: Int): Int = {
     @scala.annotation.tailrec
     def go(i: Int, a: Int, b: Int): Int = {
@@ -31,26 +36,35 @@ def fibs(n: Int): Int = {
   }
 ```
 
-练习2.3
+练习`2.3`
 实现 curry, 把带有两个参数的函数f转换为只有一个参数的部分应用函数f
+
+```scala
 def curry[A,B,C](f: (A, B) => C): A => (B => C) =
   ???
+```
 
 答案
-```
+
+```scala
 def curry[A,B,C](f: (A, B) => C): A => (B => C) =
   a => b => f(a,b)
 
 ```
 
-练习2.5
+练习`2.5`
 实现一个高阶函数，可以组合两个函数为一个函数
+
+```scala
 def compose[A,B,C](f: B => C, g: A => B): A => C =
   ???
+```
 
 答案
-```
+
+```scala
 def compose[A,B,C](f: B => C, g: A => B): A => C =
   a => f(g(a))
-```
+
 compose(f,g) = a => f(g(a))
+```
