--- a/rust/06.字符串.md
+++ b/rust/06.字符串.md
@@ -55,7 +55,7 @@ for b in "नमस्ते".bytes() {
 
 ## Slices
 
-另一个没有所有权的数据类型是 slice，slice 允许你引用集合中一段连续的元素序列，而不用引用整个集合。
+slice 是一个特殊类型的引用，slice 允许你引用集合中一段连续的元素序列，而不用引用整个集合。
 
 ### 字符串 slice
 
