--- a/rust/07.结构体.md
+++ b/rust/07.结构体.md
@@ -72,7 +72,8 @@ impl Rectangle {
 }
 ```
 
-**自动引用与解引用**  
+**自动引用与解引用**
+
 Rust 有一个叫 自动引用和解引用（automatic referencing and dereferencing）的功能。方法调用是 Rust 中少数几个拥有这种行为的地方。
 
 他是这样工作的：当使用 object.something() 调用方法时，Rust 会自动为 object 添加 &、&mut 或 * 以便使 object 与方法签名匹配。也就是说，这些代码是等价的：
@@ -95,8 +96,8 @@ impl Rectangle {
 }
 
 impl Rectangle {
-    fn can_hold(&self, other: &Rectangle) -> bool {
-        self.width > other.width && self.height > other.height
+    fn square(size: u32) -> Rectangle {
+        Rectangle { width: size, height: size }
     }
 }
 ```
