--- a/rust/09.集合.md
+++ b/rust/09.集合.md
@@ -71,7 +71,7 @@ for i in &mut v {
 }
 ```
 
-为了修改可变引用所指向的值，在使用 += 运算符之前必须使用解引用运算符（\*）获取 i 中的值。
+为了修改可变引用所指向的值，在使用 += 运算符之前必须使用解引用运算符 `*` 获取 i 中的值。
 
 使用枚举来储存多种类型
 
@@ -205,9 +205,5 @@ for word in text.split_whitespace() {
 println!("{:?}", map);
 ```
 
-or_insert 方法事实上会返回这个键的值的一个可变引用（&mut V）。这里我们将这个可变引用储存在 count 变量中，所以为了赋值必须首先使用星号（\*）解引用 count。这个可变引用在 for 循环的结尾离开作用域，这样所有这些改变都是安全的并符合借用规则。
-
-
-
-
+or_insert 方法事实上会返回这个键的值的一个可变引用（&mut V）。这里我们将这个可变引用储存在 count 变量中，所以为了赋值必须首先使用星号`*`fs解引用 count。这个可变引用在 for 循环的结尾离开作用域，这样所有这些改变都是安全的并符合借用规则。
 
