--- a/rust/01.入门.md
+++ b/rust/01.入门.md
@@ -1,7 +1,39 @@
 ## 01 入门
 
 ### 变量与常量的区别
+
 1. 不允许对常量使用 mut。  
 2. 常量使用 const 关键字，并且需要注明类型。
 3. 常量只能被设置为常量表达式，不能是函数调用的结果，或者是任何其它只能在运行时计算出的值。
 4. 在声明它的作用域中，常量在整个程序生命周期都有效。
+
+
+### mut 与 &mut
+
+① mut 修饰变量，表示这个变量可以被重新绑定, 或者再次被 mut 或 &mut 修饰。
+② &mut 修饰引用，表示它指向的对象可以被修改。
+
+```rust
+fn main() {
+    let mut var = 0_i32;
+    // 修饰引用
+    {
+        let p1 = &mut var;
+        *p1 = 1;
+    }
+    // 修饰变量
+    {
+        let mut p2 = &var;
+        let temp = 2_i32;
+        p2 = &temp;
+    }
+    // 左边修饰变量，右边修饰引用
+    {
+        let mut p3 = &mut var;
+        let mut temp = 3_i32;
+        *p3 = 3;
+        p3 = &mut temp;
+    }
+}
+```
+
