--- a/rust/14.生命周期.md
+++ b/rust/14.生命周期.md
@@ -60,6 +60,15 @@ fn longest<'a>(x: &str, y: &str) -> &'a str {
 生命周期语法是用于将函数的多个参数与其返回值的生命周期进行关联的。一旦他们形成了某种关联，Rust 就有了足够的信息来允许内存安全的操作并阻止会产生悬垂指针亦或是违反内存安全的行为。
 
 
+### 静态生命周期
+
+这里有一种特殊的生命周期值得讨论：'static，其生命周期能够存活于整个程序期间。所有的字符串字面值都拥有 'static 生命周期，我们也可以选择像下面这样标注出来：
+
+```rust
+let s: &'static str = "I have a static lifetime.";
+```
+
+
 ### 结构体中的生命周期注解
 
 ```rust
@@ -77,6 +86,22 @@ fn main() {
 ```
 
 这个结构体有一个字段，part，它存放了一个字符串 slice，这是一个引用。类似于泛型参数类型，必须在结构体名称后面的尖括号中声明泛型生命周期参数，以便在结构体定义中使用生命周期参数。这个注解意味着 **ImportantExcerpt 的实例不能比其 part 字段中的引用存在的更久**。
+
+
+### 子类的生命周期比父类要长
+
+```rust
+struct T {
+    member: i32,
+}
+
+// 'a 是 'b 的子类
+fn test<'a, 'b>(arg: &'a T) -> &'b i32 where 'a: 'b{
+    &arg.member
+}
+```
+
+注：如果泛型约束中有 `where T: 'a` 之类的条件，则类型 `T` 的所有生命周期参数必须大于等于 `'a`。要特别说明的是，若是有 `where T: 'static` 约束，则类型 `T` 要么不包含任何引用，要么可以有指向 `'static` 的借用指针。
 
 
 ### 生命周期的省略
@@ -107,29 +132,45 @@ impl<'a> ImportantExcerpt<'a> {
 这里有两个输入生命周期，所以 Rust 应用第一条生命周期省略规则并给予 &self 和 announcement 他们各自的生命周期。接着，因为其中一个参数是 &self，返回值类型被赋予了 &self 的生命周期，这样所有的生命周期都被计算出来了。
 
 
-### 静态生命周期
 
-这里有一种特殊的生命周期值得讨论：'static，其生命周期能够存活于整个程序期间。所有的字符串字面值都拥有 'static 生命周期，我们也可以选择像下面这样标注出来：
+### 生命周期省略的弊端
 
 ```rust
-let s: &'static str = "I have a static lifetime.";
+fn get_str(s: &String) -> &str {
+    println!("{}", s);
+    "hello word"
+}
+
+fn main() {
+    let x;
+    {
+        let c = String::from("hello");
+        x = get_str(&c);
+    }
+    println!("{}", x);
+}
 ```
 
-
-### 结合泛型类型参数、trait bounds 和生命周期
+报错
 
 ```rust
-use std::fmt::Display;
+error[E0597]: `c` does not live long enough
+  --> src/main.rs:16:21
+   |
+16 |         x = get_str(&c);
+   |                     ^^ borrowed value does not live long enough
+17 |     }
+   |     - `c` dropped here while still borrowed
+18 |         println!("{}", x);
+   |                        - borrow later used here
+```
 
-fn longest_with_an_announcement<'a, T>(x: &'a str, y: &'a str, ann: T) -> &'a str
-    where T: Display
-{
-    println!("Announcement! {}", ann);
-    if x.len() > y.len() {
-        x
-    } else {
-        y
-    }
+改正
+
+```rust
+fn get_str(s: &String) -> &'static str {
+    println!("{}", s);
+    "hello word"
 }
 ```
 
