--- a/rust/01.入门.md
+++ b/rust/01.入门.md
@@ -37,3 +37,68 @@ fn main() {
 }
 ```
 
+
+### 打印语句
+
+一、实现 `Display` 与 `Debug`
+
+```rust
+#[derive(Debug)]
+struct A {
+    name: String,
+}
+
+impl Display for A {
+    fn fmt(&self, f: &mut Formatter<'_>) -> std::fmt::Result {
+        write!(f, "{}", self.name)
+    }
+}
+
+fn main() {
+    println!("Hello, world!");
+    let a = A {
+        name: String::from("hello")
+    };
+    println!("{:?}", a);
+}
+```
+
+注：  
+1. 泛型容器（如 `Vec<T>`）不会实现 `Display`，而是去实现 `Debug`。因为无法得知 T 是什么类型，所以无法实现一个通用的 Display。
+2. 实现 `Display` trait，则自动实现 `ToString` 这个 trait。
+
+
+二、为一个集合类型实现 `Display`
+
+```rust
+struct List(Vec<i32>);
+
+impl fmt::Display for List {
+    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
+        // Extract the value using tuple indexing,
+        // and create a reference to `vec`.
+        let vec = &self.0;
+
+        write!(f, "[")?;
+
+        // Iterate over `v` in `vec` while enumerating the iteration
+        // count in `count`.
+        for (count, v) in vec.iter().enumerate() {
+            // For every element except the first, add a comma.
+            // Use the ? operator to return on errors.
+            if count != 0 { write!(f, ", ")?; }
+            write!(f, "{}", v)?;
+        }
+
+        // Close the opened bracket and return a fmt::Result value.
+        write!(f, "]")
+    }
+}
+
+fn main() {
+    let v = List(vec![1, 2, 3]);
+    println!("{}", v);
+}
+```
+
+
