--- a/rust/05.所有权.md
+++ b/rust/05.所有权.md
@@ -13,9 +13,8 @@
 
 ② 所有权规则
 
-Rust 中的每一个值都有一个被称为其 所有者（owner）的变量。
-值在任一时刻有且只有一个所有者。
-当所有者（变量）离开作用域，这个值将被丢弃。
+- 变量负责释放它们自己的资源，每个资源只有一个所有者。这也阻止了一个资源被释放多次。
+- 并不是所有的变量都拥有资源（比如 引用）。
 
 
 ③ 内存与分配
@@ -268,6 +267,38 @@ fn main() {
         x = Int(1);
         println!("inside is {}, x says: {:?}", insides, x);
     }
+}
+```
+
+⑥ 部分移动，部分引用
+
+当一个值的一部分字段被移动，另一部分被引用。它将无法整体被借用，而只能借用被引用的部分。
+```rust
+fn main() {
+    // #[derive(Debug)]
+    struct Person {
+        name: String,
+        age: u8,
+    }
+
+    let person = Person {
+        name: String::from("Alice"),
+        age: 20,
+    };
+
+    // `name` is moved out of person, but `age` is referenced
+    let Person { name, ref age } = person;
+
+    println!("The person's age is {}", age);
+
+    println!("The person's name is {}", name);
+
+    // Error! borrow of partially moved value: `person` 部分所有权发生了移动。
+    //println!("The person struct is {:?}", person);
+    // println!("The person's age from person struct is {}", person.name);
+
+    // `person.age`  可以被借用，因为它没有移动所有权
+    println!("The person's age from person struct is {}", person.age);
 }
 ```
 
