--- a/rust/14.生命周期.md
+++ b/rust/14.生命周期.md
@@ -1,5 +1,7 @@
 ## 生命周期
 
+生命周期用于“借用检查”保证所有的借用都是有效的。
+
 ### 函数中的生命周期注解
 
 示例1:
@@ -101,7 +103,43 @@ fn test<'a, 'b>(arg: &'a T) -> &'b i32 where 'a: 'b{
 }
 ```
 
-注：如果泛型约束中有 `where T: 'a` 之类的条件，则类型 `T` 的所有生命周期参数必须大于等于 `'a`。要特别说明的是，若是有 `where T: 'static` 约束，则类型 `T` 要么不包含任何引用，要么可以有指向 `'static` 的借用指针。
+注：  
+1. 如果泛型约束中有 `where T: 'a` 之类的条件，则类型 `T` 的所有生命周期参数必须大于等于 `'a`。
+2. T: Trait + 'a: Type T must implement trait Trait and all references in T must outlive 'a。
+3. 若是有 `where T: 'static` 约束，则类型 `T` 要么不包含任何引用，要么可以有指向 `'static` 的借用指针。
+
+```rust
+use std::fmt::Debug; // Trait to bound with.
+
+#[derive(Debug)]
+struct Ref<'a, T: 'a>(&'a T);
+// `Ref` contains a reference to a generic type `T` that has
+// an unknown lifetime `'a`. `T` is bounded such that any
+// *references* in `T` must outlive `'a`. Additionally, the lifetime
+// of `Ref` may not exceed `'a`.
+
+// A generic function which prints using the `Debug` trait.
+fn print<T>(t: T) where
+    T: Debug {
+    println!("`print`: t is {:?}", t);
+}
+
+// Here a reference to `T` is taken where `T` implements
+// `Debug` and all *references* in `T` outlive `'a`. In
+// addition, `'a` must outlive the function.
+fn print_ref<'a, T>(t: &'a T) where
+    T: Debug + 'a {
+    println!("`print_ref`: t is {:?}", t);
+}
+
+fn main() {
+    let x = 7;
+    let ref_x = Ref(&x);
+
+    print_ref(&ref_x);
+    print(ref_x);
+}
+```
 
 
 ### 生命周期的省略
