--- a/rust/11.Trait.md
+++ b/rust/11.Trait.md
@@ -8,6 +8,19 @@ pub trait Summary {
         String::from("(Read more...)")
     }
 }
+
+pub struct Tweet {
+    pub username: String,
+    pub content: String,
+    pub reply: bool,
+    pub retweet: bool,
+}
+
+impl Summary for Tweet {
+    fn summarize(&self) -> String {
+        format!("{}: {}", self.username, self.content)
+    }
+}
 ```
 
 
