--- a/rust/01.入门.md
+++ b/rust/01.入门.md
@@ -101,4 +101,13 @@ fn main() {
 }
 ```
 
+注：  
+tuple struct 与 type 别名两者区别？
 
+```rust
+struct List(Vec<i32>);
+
+type List = Vec<i32>;
+```
+
+前者是一个新类型；后者只是一个语法糖，可以随时用 `Vec<i32>` 将其替换，故而在此无法用它实现 `Display` trait，因为 rust 的限制。
