--- a/rust/02.数据类型.md
+++ b/rust/02.数据类型.md
@@ -50,6 +50,8 @@ fn main() {
 
 debug 模式编译时会检测溢出。在 release 构建中，不检测溢出，而会进行二进制补码包装。
 
+以 u8 为例，它的取值范围为 0-255，如果你把它变成了 256（比如通过算数运算），在 release 模式下，256 会被补码成 0.
+
 
 ### 复合（compound）
 
