--- a/rust/06.字符串.md
+++ b/rust/06.字符串.md
@@ -91,6 +91,7 @@ fn first_word(s: &str) -> &str {
 
 ```rust
 let a = [1, 2, 3, 4, 5];
+//或 let a = vec![1, 2, 3, 4, 5];
 
 let slice: &[i32] = &a[1..3];
 ```
