--- a/rust/12.包与模块.md
+++ b/rust/12.包与模块.md
@@ -67,6 +67,33 @@ use std::collections::*;
 ```
 
 
+### extern 关键字
+
+两种用法，一是 rust 调用 C，二是 C 调用 rust。
+
+第一种：在 rust 中调用 C 代码
+
+```rust
+extern "C" {
+    fn abs(input: i32) -> i32;
+}
+
+fn main() {
+    unsafe {
+        println!("Absolute value of -3 according to C: {}", abs(-3));
+    }
+}
+```
+
+第二种：需要被编译为动态库，并在 C 语言中链接
+
+```rust
+#[no_mangle]
+pub extern "C" fn call_from_c() {
+    println!("Just called a Rust function from C!");
+}
+```
+
 ### 模块
 用于将一个 crate 中的代码进行分组，以提高可读性与重用性。并且可以控制项访问权限。
 
