--- a/rust/09.集合.md
+++ b/rust/09.集合.md
@@ -50,6 +50,21 @@ v.push(6);
 
 println!("The first element is: {}", first);
 ```
+报错：
+
+```rust
+error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
+  --> src/main.rs:10:5
+   |
+8  |     let first = &v[0];
+   |                  - immutable borrow occurs here
+9  |
+10 |     v.push(6);
+   |     ^^^^^^^^^ mutable borrow occurs here
+11 |
+12 |     println!("The first element is: {}", first);
+   |                                          ----- immutable borrow later used here
+```
 
 遍历 vector 中的元素
 
