--- a/rust/03.函数.md
+++ b/rust/03.函数.md
@@ -1,7 +1,7 @@
 ## 函数
 
 ### 语句与表达式
-语句（Statements）是执行一些操作但不返回值的指令。表达式（Expressions）计算并产生一个值。
+函数体由一系列可选地以表达式结尾的语句组成。语句（Statements）是执行一些操作但不返回值的指令。表达式（Expressions）计算并产生一个值。
 
 注意结尾没有分号的那一行 x+1，与你见过的大部分代码行不同。表达式的结尾没有分号。如果在表达式的结尾加上分号，它就变成了语句，而语句不会返回值。
 
