--- a/rust/17.高级 trait.md
+++ b/rust/17.高级 trait.md
@@ -305,5 +305,5 @@ impl<T> Screen<T>
 ```
 
 注：  
-使用后者，限制了  Screen 实例只能有一种泛型实现，而使用 trait 对象的方法，一个 Screen 实例可以存放一个既能包含 Box<Button>，也能包含 Box<TextField> 的 Vec<T>。
+使用后者，限制了  Screen 实例只能有一种泛型实现，而使用 trait 对象的方法，一个 Screen 实例可以存放一个既能包含 `Box<Button>`，也能包含 `Box<TextField>` 的 `Vec<T>`。
 
