--- a/scala/01.起步.md
+++ b/scala/01.起步.md
@@ -2,17 +2,20 @@
 
 ### 1 语法潜规则
 
-① 如果一个方法接受一个函数作为参数，并且该方法没有重载，那么可以直接传递方法作为参数（自动换为函数）
+① 如果一个方法（或一个函数)接受一个函数作为参数，那么可以直接传递一个方法作为参数（自动换为函数）
 
 ```scala
+// 这里应用了`eta 展开`进行自动转换，方法转函数
 args.foreach(println)
 ```
 
 等价于
 
 ```scala
+//用后缀下划线，手动将方法转换成函数(如果该方法没有重载方法)
 args.foreach(println _)
 ```
+
 
 foreach 源码参考
 
