--- a/rust/05.所有权.md
+++ b/rust/05.所有权.md
@@ -251,7 +251,7 @@ error[E0506]: cannot assign to `x` because it is borrowed
   |                    - borrow later used here
 ```
 
-⑤ 在模式匹配或 let 解构中，关键词 `ref` 表用于示对 struct/tuple 中某个字段的引用
+⑤ 在模式匹配或 let 解构中，关键词 `ref` 用于表示对 struct/tuple 中某个字段的引用
 
 [参考](https://doc.rust-lang.org/rust-by-example/scope/borrow/ref.html)
 
