--- a/rust/09.集合.md
+++ b/rust/09.集合.md
@@ -30,9 +30,11 @@ v.push(8);
 ```rust
 let v = vec![1, 2, 3, 4, 5];
 
+//直接下标取值
 let third: &i32 = &v[2];
 println!("The third element is {}", third);
 
+//使用 get(2) 返回值可能为空
 match v.get(2) {
     Some(third) => println!("The third element is {}", third),
     None => println!("There is no third element."),
