--- a/rust/07.结构体.md
+++ b/rust/07.结构体.md
@@ -90,12 +90,14 @@ impl 块的另一个有用的功能是：允许在 impl 块中定义 不 以 sel
 
 ```rust
 impl Rectangle {
+    //方法， 以 self 作为参数
     fn area(&self) -> u32 {
         self.width * self.height
     }
 }
 
 impl Rectangle {
+    //函数
     fn square(size: u32) -> Rectangle {
         Rectangle { width: size, height: size }
     }
