--- a/rust/专题1 —— 内部可变性.md
+++ b/rust/专题1 —— 内部可变性.md
@@ -10,7 +10,7 @@ Rust 中的借用检查器的核心思想是“共享不可变，可变不共享
 
 ## 内部可变性
 
-常见的具备内部可变特点的类型有 Cell、RefCell、M视同儿戏
+常见的具备内部可变特点的类型有 Cell、RefCell、Mutex
 、RwLock、Atomic* 等。其中 Cell 与 RefCell 只能用在单线程环境下具备内部可变性。
 
 示例
